# coredumper

./: CMakeLists.txt
examples/cpp_example/: CMakeLists.txt  coredumper_example.cpp
src/: CMakeLists.txt  coredumperConfig.cmake.in
